src/validation/tests/snapshots/rusty__validation__tests__naming_validation_test__LTIME_OF_DAY.snap
---
source: src/validation/tests/naming_validation_test.rs
expression: "& result"
---
error[E004]: LTIME_OF_DAY can not be used as a name because it is a built-in datatype
  ┌─ <internal>:1:6
  │
1 │ TYPE LTIME_OF_DAY : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^^^^^^^^^ LTIME_OF_DAY can not be used as a name because it is a built-in datatype

error[E004]: LTIME_OF_DAY: Ambiguous datatype.
  ┌─ <internal>:1:6
  │
1 │ TYPE LTIME_OF_DAY : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^^^^^^^^^ LTIME_OF_DAY: Ambiguous datatype.
